--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-title: Note Application
+title: Notes
+description: An android application for writing and syncing notes over the cloud. 
